--- a/WeatherApp.cabal
+++ b/WeatherApp.cabal
@@ -66,6 +66,8 @@ executable WeatherApp
                    Parser
                    Handler
                    Discord
+                   Display
+                   Utils
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
