--- a/WeatherApp.cabal
+++ b/WeatherApp.cabal
@@ -111,6 +111,56 @@ executable WeatherApp
     default-language: Haskell2010
 
 
+
+library
+    -- Import common warning flags.
+    import:           warnings
+    -- Exposed modules for the library.
+    exposed-modules:  API
+                     , Types
+                     , Parser
+                     , Handler
+                     , Discord
+                     , Display
+                     , Utils
+
+    -- Other library packages from which modules are imported.
+    build-depends:    base ^>=4.17.0.0
+                    , calamity >=0.5
+                    , data-default
+                    , df1
+                    , di
+                    , di-core
+                    , di-polysemy
+                    , http-client
+                    , optics
+                    , polysemy
+                    , polysemy-plugin
+                    , pretty-simple
+                    , text
+                    , text-show
+                    , tls >= 1.5.0 && < 1.6.0
+                    , mtl >= 2.2
+                    , servant
+                    , servant-client
+                    , servant-docs
+                    , servant-server
+                    , http-client
+                    , http-client-tls
+                    , transformers
+                    , megaparsec
+                    , aeson >=2.0 && <3.0
+                    , time 
+                    , lens >=5.3.4  
+                    , QuickCheck  
+                    , quickcheck-instances
+
+    ghc-options: -fplugin=Polysemy.Plugin
+    -- Directories containing source files.
+    hs-source-dirs:   app
+
+    -- Base language which the package is written in.
+    default-language: Haskell2010
 test-suite WeatherApp-test
     -- Import common warning flags.
     import:           warnings
@@ -119,7 +169,8 @@ test-suite WeatherApp-test
     default-language: Haskell2010
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules: TParser
+                 , THandler
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -132,8 +183,13 @@ test-suite WeatherApp-test
 
     -- The entrypoint to the test suite.
     main-is:          Main.hs
-
     -- Test dependencies.
     build-depends:
-        base ^>=4.17.2.1,
-        WeatherApp
+        base ^>=4.17.0.0,
+        WeatherApp,
+        QuickCheck,
+        quickcheck-instances,
+        text,
+        text-show,
+        megaparsec,
+        time
